IDE autofixes, collections replacements